fix: storage space permission verification logic